--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,61 @@
-pipeline-live>=0.1.9
-bottleneck>=1.3
-pytz>=2020.1
-logbook>=1.5
-astor>=0.8.1
-trading_calendars>=1.11
-click>=7,<8
-PyYAML>=5, <6
-ipython>=7
-alpaca-trade-api>=0.50.1
+alembic==1.4.2
+alpaca-trade-api==0.50.1
+appnope==0.1.0
+astor==0.8.1
+backcall==0.2.0
+bcolz==0.12.1
+Bottleneck==1.3.2
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+contextlib2==0.6.0.post1
+cyordereddict==1.0.0
+Cython==0.29.21
+decorator==4.4.2
+empyrical==0.5.3
+idna==2.10
+iexfinance==0.4.3
+intervaltree==3.1.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+Logbook==1.5.3
+lru-dict==1.1.6
+lxml==4.5.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+multipledispatch==0.6.0
+networkx==1.11
+numexpr==2.7.1
+numpy==1.19.1
+pandas==0.22.0
+pandas-datareader==0.9.0
+parso==0.7.1
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pipeline-live==0.1.9
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.6.1
+pylivetrader==0.4.0
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2020.1
+PyYAML==5.3.1
+requests==2.24.0
+requests-file==1.5.1
+scipy==1.5.2
+six==1.15.0
+sortedcontainers==2.2.2
+SQLAlchemy==1.3.19
+statsmodels==0.12.0
+tables==3.6.1
+toolz==0.10.0
+trading-calendars==1.11.11
+traitlets==4.3.3
+urllib3==1.25.10
+wcwidth==0.2.5
+websocket-client==0.57.0
+websockets==8.1
 zipline==1.3.0
-numpy==1.11
-pandas==0.18.1  # pyup: ignore # limit to work properly with zipline 1.3.0
-pandas-datareader<=0.8.1 
