--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
 PyYAML==5.3.1
+redis==3.5.3
 requests==2.24.0
 requests-file==1.5.1
 scipy==1.5.2
